Update to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4483,3 +4483,7 @@ Packages/packages-lock.json
 Library/Style.catalog
 Packages/packages-lock.json
 Library/Style.catalog
+.vs/The-Wrong-Turn/v16/.suo
+.vsconfig
+Assembly-CSharp-Editor.csproj
+Assembly-CSharp.csproj
