Added Collider disabling to taxi script

--- a/.gitignore
+++ b/.gitignore
@@ -4487,3 +4487,25 @@ Library/Style.catalog
 .vsconfig
 Assembly-CSharp-Editor.csproj
 Assembly-CSharp.csproj
+Library/Artifacts/42/42a35c429d2371293f3897d4c966b932
+Library/Artifacts/45/451a98c3f026d4525e42f2c07eec3265
+Library/Artifacts/52/5241e20d5c12e4477bb17ef253709c0b
+Library/Artifacts/6b/6b338c6f284dd995404cee81ca5f0b8d
+Library/Artifacts/75/75358a0f744de34436b6d129fc393297
+Library/Artifacts/92/9244abb260319bb83f1e3bbec42f476a
+Library/Artifacts/b0/b08e19f9257acaefe27913598b5042a1
+Library/Artifacts/de/dee74bfecf3d6ba9f4015cd320ee196f
+Library/Artifacts/e6/e6040c0a4707aa511de1c630217a8b75
+Library/Artifacts/ec/ecceac6ef87476f2c86d2b5dcbba3d15
+Library/Artifacts/fc/fcc994498784a272b9e33c358cd1e60a
+Library/Style.catalog
+Packages/packages-lock.json
+Temp/UnityTempFile-0308e58c83e9ac44aaef257e16c79906
+Temp/UnityTempFile-27546d77ae377b645905bd6fc15c9e6c
+Temp/UnityTempFile-58955842449d4194cb5c717309fa6d70
+Temp/UnityTempFile-5ef11b51ceae0b84da6eb1a35f2ee3e9
+Temp/UnityTempFile-6f844d59bd0b5434fa690c556484ee9c
+Temp/UnityTempFile-7e010b046cb916e4f80cfb285d994961
+Temp/UnityTempFile-b98ecd4adde10a846a77f655a93968c9
+Temp/UnityTempFile-d0154a093eb741348bddfee854c8b439
+Temp/UnityTempFile-ed18603b09770074ea4858740e045b68
