Waypoints NE map added

--- a/.gitignore
+++ b/.gitignore
@@ -4509,3 +4509,61 @@ Temp/UnityTempFile-7e010b046cb916e4f80cfb285d994961
 Temp/UnityTempFile-b98ecd4adde10a846a77f655a93968c9
 Temp/UnityTempFile-d0154a093eb741348bddfee854c8b439
 Temp/UnityTempFile-ed18603b09770074ea4858740e045b68
+Library/Artifacts/00/00228140ef901d554a90acef75389bbb
+Library/Artifacts/00/00d6b468454307bec698dee440884886
+Library/Artifacts/3c/3c1769d8d9768a04a5228c03bc54d216
+Library/Artifacts/43/43538e87a6fcb45c5d3ba12d0af39d4e
+Library/Artifacts/5c/5cb56ec3e92b537d2818887d88fe0ef6
+Library/Artifacts/61/61666ae74a18a3c92ac84d38e5df87b1
+Library/Artifacts/63/63ba0a297f28774ff40f0c6c37adbfcd
+Library/Artifacts/8e/8ee95603b89f3b3bdf25a16aa77a72fb
+Library/Artifacts/90/90feca81315fbce1e06eb43e76f95be2
+Library/Artifacts/9a/9aee7543ab04d4f7950d19ec513b4f6b
+Library/Artifacts/a4/a4fbe327d1983ab2f6c561a978e52b7e
+Library/Artifacts/aa/aa3c62e6de5a7a8d2b6b64f7fbc48b48
+Library/Artifacts/ac/ac63bfce14504b71869aa29994a2290a
+Library/Artifacts/e9/e99aa290a46a37b51a6cdb6cac62a60f
+Library/Artifacts/f5/f5fb9a950fca12f187ba11cc1ef14ebe
+Library/Artifacts/fc/fc63f810d3a875bf4caee2be086546f1
+Library/ShaderCache/1/12a0b41a3c5332eb219682b96a33c24a.bin
+Library/ShaderCache/5/5f411ba6cf67290c7ce676592ee2a5c6.bin
+Library/ShaderCache/b/ba7eb9f5b0a492722d08abe574026c9e.bin
+Library/ShaderCache/c/c88a350d51f8eee371789a21a3c34b69.bin
+Library/ShaderCache/c/c8c7d94e895f07712feff112fa3cc316.bin
+Library/ShaderCache/f/f956222c511ef450810b168b03964931.bin
+Library/StateCache/Hierarchy/5995d2-04d5d9da0f79e6c4e8.json
+Library/StateCache/Hierarchy/5995d2-637645952f023514fb.json
+Library/StateCache/SceneView/fc0c01-04d5d9da0f79e6c4e8.json
+Library/StateCache/SceneView/fc0c01-637645952f023514fb.json
+Packages/packages-lock.json
+Temp/UnityTempFile-0e380ead7d589a448a7698e66de8b865
+Temp/UnityTempFile-0ef244b200070ab43b12b703ae6dba0c
+Temp/UnityTempFile-1eef5b08406d48645a828f0e24123613
+Temp/UnityTempFile-2988622b66fc1764faa349b8516c9887
+Temp/UnityTempFile-3f7a045aa194e3b4dbb814f15fd1666f
+Temp/UnityTempFile-4374df757d4c40a4abb72a7f5d2d558a
+Temp/UnityTempFile-4faac653b7cf85b44b1d6160ae089ad4
+Temp/UnityTempFile-5f60c764434ef1c41a059c252ce607ea
+Temp/UnityTempFile-63cffbd4490c3254fa3b8ad2785158f3
+Temp/UnityTempFile-9a17bf2b8e91142479112ce00db9dfdd
+Temp/UnityTempFile-a02bbed02b594d64c89d979380376201
+Temp/UnityTempFile-a568787593d53b44180044deece1436d
+Temp/UnityTempFile-e5a65dbf2f4cbd844965d80ef334e7b4
+Library/Artifacts/8e/8ee95603b89f3b3bdf25a16aa77a72fb
+Library/Artifacts/90/90feca81315fbce1e06eb43e76f95be2
+Library/Artifacts/e9/e99aa290a46a37b51a6cdb6cac62a60f
+Library/Artifacts/f5/f5fb9a950fca12f187ba11cc1ef14ebe
+Packages/packages-lock.json
+Temp/UnityTempFile-0e380ead7d589a448a7698e66de8b865
+Temp/UnityTempFile-0ef244b200070ab43b12b703ae6dba0c
+Temp/UnityTempFile-1eef5b08406d48645a828f0e24123613
+Temp/UnityTempFile-2988622b66fc1764faa349b8516c9887
+Temp/UnityTempFile-3f7a045aa194e3b4dbb814f15fd1666f
+Temp/UnityTempFile-4374df757d4c40a4abb72a7f5d2d558a
+Temp/UnityTempFile-4faac653b7cf85b44b1d6160ae089ad4
+Temp/UnityTempFile-5f60c764434ef1c41a059c252ce607ea
+Temp/UnityTempFile-63cffbd4490c3254fa3b8ad2785158f3
+Temp/UnityTempFile-9a17bf2b8e91142479112ce00db9dfdd
+Temp/UnityTempFile-a02bbed02b594d64c89d979380376201
+Temp/UnityTempFile-a568787593d53b44180044deece1436d
+Temp/UnityTempFile-e5a65dbf2f4cbd844965d80ef334e7b4
