Added more waypoints

--- a/.gitignore
+++ b/.gitignore
@@ -4567,3 +4567,106 @@ Temp/UnityTempFile-9a17bf2b8e91142479112ce00db9dfdd
 Temp/UnityTempFile-a02bbed02b594d64c89d979380376201
 Temp/UnityTempFile-a568787593d53b44180044deece1436d
 Temp/UnityTempFile-e5a65dbf2f4cbd844965d80ef334e7b4
+Library/Artifacts/10/10c765b2bdb2478e513685f8c2634a48
+Library/Artifacts/2a/2a7b0f49c52d67e221de073c028f1601
+Library/Artifacts/35/359538924ff2faf8ec2520bec34d842b
+Library/Artifacts/36/36d64a0b46152c69f4bf6fa86a87605f
+Library/Artifacts/3d/3da51f1441dd85d09362626c96a3a2b6
+Library/Artifacts/49/49771e5166fb487ce4c46213f9518896
+Library/Artifacts/4d/4d88b000dd54740f1e4572a2097fde9f
+Library/Artifacts/4e/4e8eb48ed2a9c2539bc069ef90bee8bd
+Library/Artifacts/5b/5bfd06f6ff9d29e1375e29ae3f11a416
+Library/Artifacts/5e/5ec852d105ea01e077d66f4a3148dbd6
+Library/Artifacts/68/682e8511dbeb35b0f82d578ebc197b65
+Library/Artifacts/71/71031238ba02f2cf9d6a67679ae58fd0
+Library/Artifacts/90/90feca81315fbce1e06eb43e76f95be2
+Library/Artifacts/b9/b9935f88044bc9089f17c8709777140e
+Library/Artifacts/c3/c3f365d4d39e0698fd7dec66842e1097
+Library/Artifacts/da/da659a2b698c9cc66a5a11f5c24d0622
+Library/Artifacts/dc/dcd7a82d4a1aeae9af085ac8ef757ddc
+Library/Artifacts/e9/e99aa290a46a37b51a6cdb6cac62a60f
+Library/Artifacts/f5/f5fb9a950fca12f187ba11cc1ef14ebe
+Library/ShaderCache/0/03188b86ccdb208d9f777e4f1f1d5b16.bin
+Library/ShaderCache/0/04b0dbf5c7726ea6ee3260a79b9b0d88.bin
+Library/ShaderCache/2/25985eb9f6ccb9605c599c2cc632b5b4.bin
+Library/ShaderCache/3/3fea29a6bf36367eac369697f2d5a07e.bin
+Library/ShaderCache/5/54bb937b3244012519a73c07f40994d0.bin
+Library/ShaderCache/6/6f8d2070622669614224c74592f39bd1.bin
+Library/ShaderCache/7/7e91845ff33510ccbf873ad2ba52d7d7.bin
+Library/ShaderCache/9/9cf18f0da8f7027f36c218ed5da53cf9.bin
+Library/ShaderCache/9/9eb59f4647baffacacd51e5a2c5eef38.bin
+Library/ShaderCache/9/9f07a28d46c5e6635cbfbbb34491067f.bin
+Library/ShaderCache/a/a4eaf26ff3841caca6460648892a44cd.bin
+Library/ShaderCache/a/ac1058b1d7acc156c43ba59b46b97f78.bin
+Library/ShaderCache/c/c130cda6f166999ebf506e904db7cf2b.bin
+Library/ShaderCache/d/d8010ddd4a9c85b4d729934224a0050b.bin
+Library/ShaderCache/e/ef4add59cf5f221e91079f2c4fa254c7.bin
+Library/ShaderCache/f/f03bf683597613390bd770b962ab2272.bin
+Library/ShaderCache/f/f04b0ad25ad32fc687a3372980e671f1.bin
+Library/ShaderCache/f/fcf4934645f62a0f502ca403c97e3aef.bin
+Library/TerrainTools/PaintTexture
+Packages/packages-lock.json
+Temp/ProcessJobs/2de1acddd6f415302793db1a3e7b23ea.bakert
+Temp/UnityTempFile-01b6a985abc1f8142884a1596721a456
+Temp/UnityTempFile-0254ca96a7df3754e8434b8aa5f93c68
+Temp/UnityTempFile-03471d05e0abd7641b59255de649d63c
+Temp/UnityTempFile-0bf18a93e769d264ab106d04eb2d27d9
+Temp/UnityTempFile-0e380ead7d589a448a7698e66de8b865
+Temp/UnityTempFile-0ef244b200070ab43b12b703ae6dba0c
+Temp/UnityTempFile-1eef5b08406d48645a828f0e24123613
+Temp/UnityTempFile-2758c045756b83341859f1cb65cba681
+Temp/UnityTempFile-2988622b66fc1764faa349b8516c9887
+Temp/UnityTempFile-31e7a813b490c7647918a3bc4e783990
+Temp/UnityTempFile-32c6dceb56ec55245a71bac3941b7975
+Temp/UnityTempFile-3b5f457ca41d1dd498399081aa5d8097
+Temp/UnityTempFile-3cd5d8c0adaf2b14fb423e2ebfadc1c3
+Temp/UnityTempFile-3f1906b1b4ab69247866a1e556c2a216
+Temp/UnityTempFile-3f7a045aa194e3b4dbb814f15fd1666f
+Temp/UnityTempFile-3fa69fad43b544943953ee3733c54188
+Temp/UnityTempFile-4374df757d4c40a4abb72a7f5d2d558a
+Temp/UnityTempFile-4faac653b7cf85b44b1d6160ae089ad4
+Temp/UnityTempFile-530d1f1ba41d7dc42bca7375284cac22
+Temp/UnityTempFile-5f60c764434ef1c41a059c252ce607ea
+Temp/UnityTempFile-62c797ad07a00da4597954345b9d14bc
+Temp/UnityTempFile-63cffbd4490c3254fa3b8ad2785158f3
+Temp/UnityTempFile-654e66c4e6af8ff4c8a6394db53dd4d8
+Temp/UnityTempFile-67fb420925baaf544a7c5af2ca1a64ab
+Temp/UnityTempFile-6eab2807c919e0b47988f4bc47ba33df
+Temp/UnityTempFile-708e4d7a45e4d2f4ea571701a15b8b5a
+Temp/UnityTempFile-74c48d16cf4202c4f8a77a87211e9aca
+Temp/UnityTempFile-7575a5ad0981a2f458fe889bdd7aa240
+Temp/UnityTempFile-834cb6d8f11fb0d479ee3dbfa5d31b1f
+Temp/UnityTempFile-9a17bf2b8e91142479112ce00db9dfdd
+Temp/UnityTempFile-9ac9140d65bc19b409eb12f433b98ccc
+Temp/UnityTempFile-a02bbed02b594d64c89d979380376201
+Temp/UnityTempFile-a568787593d53b44180044deece1436d
+Temp/UnityTempFile-a874eb6258a7a9c4990828a0a1e5fc97
+Temp/UnityTempFile-b14cb0c490c0d7349a5ea0c283ca04b9
+Temp/UnityTempFile-b4464577fb39f954d8bf6d3ab39c0bb6
+Temp/UnityTempFile-cce844554c5a1684696d1ab4e8055267
+Temp/UnityTempFile-de3e7b7103a3f154e8e060a8e036d1e2
+Temp/UnityTempFile-de59dd51670561e41a2f97ee5624320e
+Temp/UnityTempFile-e1738ae42d92d2e4b813d8e501e9c513
+Temp/UnityTempFile-e5a65dbf2f4cbd844965d80ef334e7b4
+Temp/UnityTempFile-e98dea3b4b1cd534887ac81a7e67a64a
+Temp/UnityTempFile-f5c9bd41f472590468c68bd44bcf537d
+Temp/UnityTempFile-f703261f2374bc346865383a2b858ecf
+Temp/UnityTempFile-f7c5e908daee0764ea3a3a3c0d6a2b76
+Temp/UnityTempFile-fd14ffd30def4b44da212c3a86d7a5b4
+Library/Artifacts/90/90feca81315fbce1e06eb43e76f95be2
+Library/Artifacts/e9/e99aa290a46a37b51a6cdb6cac62a60f
+Library/Artifacts/f5/f5fb9a950fca12f187ba11cc1ef14ebe
+Packages/packages-lock.json
+Temp/UnityTempFile-0e380ead7d589a448a7698e66de8b865
+Temp/UnityTempFile-0ef244b200070ab43b12b703ae6dba0c
+Temp/UnityTempFile-1eef5b08406d48645a828f0e24123613
+Temp/UnityTempFile-2988622b66fc1764faa349b8516c9887
+Temp/UnityTempFile-3f7a045aa194e3b4dbb814f15fd1666f
+Temp/UnityTempFile-4374df757d4c40a4abb72a7f5d2d558a
+Temp/UnityTempFile-4faac653b7cf85b44b1d6160ae089ad4
+Temp/UnityTempFile-5f60c764434ef1c41a059c252ce607ea
+Temp/UnityTempFile-63cffbd4490c3254fa3b8ad2785158f3
+Temp/UnityTempFile-9a17bf2b8e91142479112ce00db9dfdd
+Temp/UnityTempFile-a02bbed02b594d64c89d979380376201
+Temp/UnityTempFile-a568787593d53b44180044deece1436d
+Temp/UnityTempFile-e5a65dbf2f4cbd844965d80ef334e7b4
