Initial UI Layout

--- a/.gitignore
+++ b/.gitignore
@@ -4670,3 +4670,53 @@ Temp/UnityTempFile-9a17bf2b8e91142479112ce00db9dfdd
 Temp/UnityTempFile-a02bbed02b594d64c89d979380376201
 Temp/UnityTempFile-a568787593d53b44180044deece1436d
 Temp/UnityTempFile-e5a65dbf2f4cbd844965d80ef334e7b4
+Library/Artifacts/01/01052c8f29f45caa45bcb2928bc02ba6
+Library/Artifacts/02/02c0d5b35ef1d30479f8d06687c47510
+Library/Artifacts/0d/0d52386d99efe350c679d10c7815b936
+Library/Artifacts/1c/1c811015e6262c995ec59c7a26e378af
+Library/Artifacts/1d/1d62bb09ebb2b600138f7fdd494d6b8a
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/3f/3f6c4af970e84f2b2c5851f8a329352f
+Library/Artifacts/4a/4a669d4b647b965a0813aa65e55b4e43
+Library/Artifacts/67/677721c424f380bb7711b21b419487b0
+Library/Artifacts/69/692e7f8ab9fc8b92627df1fcb96f232b
+Library/Artifacts/8e/8ee95603b89f3b3bdf25a16aa77a72fb
+Library/Artifacts/90/90feca81315fbce1e06eb43e76f95be2
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/Artifacts/a6/a62b13a4a12b22d7c230f64ed9203310
+Library/Artifacts/b1/b19747051d36f17e5e33d0f4a1ee671b
+Library/Artifacts/bc/bca60cb3808701b58c82f02a9ea6f0a1
+Library/Artifacts/e2/e2a2ded3fc9d7d26dd9de27dd7d6f596
+Library/Artifacts/e9/e99aa290a46a37b51a6cdb6cac62a60f
+Library/Artifacts/f5/f5fb9a950fca12f187ba11cc1ef14ebe
+Library/Artifacts/fc/fc29a7663e42585d7d3a288412d0bf3e
+Library/ShaderCache/1/18fd40825e3faf077d1dcfeaeb7274cd.bin
+Library/ShaderCache/3/3a626e3a58566f673eb9700a1cb82db3.bin
+Library/ShaderCache/4/4fa7265ce60d21a1576ea3139fcfc804.bin
+Library/ShaderCache/6/6d8476e764fa117c3fb88c5e9e079952.bin
+Library/ShaderCache/8/8952cde754c672831f9b0e0c1b3bbfde.bin
+Library/ShaderCache/9/990ece68737ecdc97795c9d9587d0b3e.bin
+Library/ShaderCache/d/d682e508441fb44b14cb5a347e82a1df.bin
+Library/ShaderCache/f/f8175e1d8061d8170974c0f449a7ad46.bin
+Packages/packages-lock.json
+Temp/UnityTempFile-0e380ead7d589a448a7698e66de8b865
+Temp/UnityTempFile-0ee2f0a4273ecd4469e20df3200d1be5
+Temp/UnityTempFile-0ef244b200070ab43b12b703ae6dba0c
+Temp/UnityTempFile-10e37df28783fac4c9bb0f18fcffbd18
+Temp/UnityTempFile-1eef5b08406d48645a828f0e24123613
+Temp/UnityTempFile-2988622b66fc1764faa349b8516c9887
+Temp/UnityTempFile-36244b10cff6fdf4c87808339a03d42d
+Temp/UnityTempFile-3f7a045aa194e3b4dbb814f15fd1666f
+Temp/UnityTempFile-4374df757d4c40a4abb72a7f5d2d558a
+Temp/UnityTempFile-4862236fec9fb784ca02df101a67bc8b
+Temp/UnityTempFile-4d57731b474c9d94881e93aa33dccac0
+Temp/UnityTempFile-4faac653b7cf85b44b1d6160ae089ad4
+Temp/UnityTempFile-5f60c764434ef1c41a059c252ce607ea
+Temp/UnityTempFile-63cffbd4490c3254fa3b8ad2785158f3
+Temp/UnityTempFile-9a17bf2b8e91142479112ce00db9dfdd
+Temp/UnityTempFile-a02bbed02b594d64c89d979380376201
+Temp/UnityTempFile-a568787593d53b44180044deece1436d
+Temp/UnityTempFile-bddafd9ba15a247459b5a8ee18bc01b6
+Temp/UnityTempFile-dd6926891acb2544dbcda2b8265b55a2
+Temp/UnityTempFile-e4ae24bd1e2a1294f8b41e6d6c249d92
+Temp/UnityTempFile-e5a65dbf2f4cbd844965d80ef334e7b4
