--- a/.gitignore
+++ b/.gitignore
@@ -4720,3 +4720,27 @@ Temp/UnityTempFile-bddafd9ba15a247459b5a8ee18bc01b6
 Temp/UnityTempFile-dd6926891acb2544dbcda2b8265b55a2
 Temp/UnityTempFile-e4ae24bd1e2a1294f8b41e6d6c249d92
 Temp/UnityTempFile-e5a65dbf2f4cbd844965d80ef334e7b4
+Library/Artifacts/2d/2dd03417ce696432651f782cc93fabdb
+Library/Artifacts/47/47367fead7dc3e70b924227c39e18710
+Library/Artifacts/67/677721c424f380bb7711b21b419487b0
+Library/Artifacts/8e/8ee95603b89f3b3bdf25a16aa77a72fb
+Library/Artifacts/90/90feca81315fbce1e06eb43e76f95be2
+Library/Artifacts/ba/ba90ebf4d1a924bd11a6e6cc6d617bd5
+Library/Artifacts/bc/bca60cb3808701b58c82f02a9ea6f0a1
+Library/Artifacts/e1/e1de044cdc79724dc32838e35bc3cadc
+Library/Artifacts/e9/e99aa290a46a37b51a6cdb6cac62a60f
+Library/Artifacts/f5/f5fb9a950fca12f187ba11cc1ef14ebe
+Packages/packages-lock.json
+Temp/UnityTempFile-0e380ead7d589a448a7698e66de8b865
+Temp/UnityTempFile-0ef244b200070ab43b12b703ae6dba0c
+Temp/UnityTempFile-1eef5b08406d48645a828f0e24123613
+Temp/UnityTempFile-2988622b66fc1764faa349b8516c9887
+Temp/UnityTempFile-3f7a045aa194e3b4dbb814f15fd1666f
+Temp/UnityTempFile-4374df757d4c40a4abb72a7f5d2d558a
+Temp/UnityTempFile-4faac653b7cf85b44b1d6160ae089ad4
+Temp/UnityTempFile-5f60c764434ef1c41a059c252ce607ea
+Temp/UnityTempFile-63cffbd4490c3254fa3b8ad2785158f3
+Temp/UnityTempFile-9a17bf2b8e91142479112ce00db9dfdd
+Temp/UnityTempFile-a02bbed02b594d64c89d979380376201
+Temp/UnityTempFile-a568787593d53b44180044deece1436d
+Temp/UnityTempFile-e5a65dbf2f4cbd844965d80ef334e7b4
