--- a/.gitignore
+++ b/.gitignore
@@ -4744,3 +4744,10 @@ Temp/UnityTempFile-9a17bf2b8e91142479112ce00db9dfdd
 Temp/UnityTempFile-a02bbed02b594d64c89d979380376201
 Temp/UnityTempFile-a568787593d53b44180044deece1436d
 Temp/UnityTempFile-e5a65dbf2f4cbd844965d80ef334e7b4
+Library/Artifacts/05/05cd7c101f4190e6b5ed20420a2c9700
+Library/Artifacts/38/3825d17e513deb71abd40835cd0114c4
+Library/Artifacts/6b/6bd42405068f013cee13fbc0ac97a37a
+Library/Artifacts/72/728c501bc713bf0e734e4c3bc6b3f2f6
+Library/Artifacts/a8/a84ca284c637e856c873a26e33d0e73b
+Library/Artifacts/c0/c00600dfb9b98765267665f28d70a706
+Library/Artifacts/df/df72cb552b85781922519bd16021f42b
