Fixed Minor UI issue

--- a/.gitignore
+++ b/.gitignore
@@ -6312,3 +6312,49 @@ Temp/UnityTempFile-a5a12d89ba77b794e92d3a5f6731659e
 Temp/UnityTempFile-c74646bc41a31fe4086973f06a4e8014
 Temp/UnityTempFile-d2007072d39296647b8d959398592e83
 Temp/UnityTempFile-f6abf3d574b614f4ca91ae7136a9bb94
+Packages/packages-lock.json
+Library/StateCache/SceneView/fc0c01-8397a8fb15525ed47a.json
+Library/StateCache/Hierarchy/5995d2-8397a8fb15525ed47a.json
+Library/ShaderCache/f/fc17a7d573c58b56103803d7de74147f.bin
+Library/ShaderCache/5/5c9dd4b181a7870c75ff3d784e4b6935.bin
+Library/ShaderCache/1/1aca265049d7662b61d733617143fb25.bin
+Library/ShaderCache/1/13b9e2d9070487e1c51c02d97a4fe00f.bin
+Library/Artifacts/ee/ee12e076d45347432a600ff1cccfbb75
+Library/Artifacts/e7/e780482b00038f4e7c20409c830911d9
+Packages/packages-lock.json
+Library/Artifacts/e4/e4450cc983e6dc0d7e2cc530612a0adb
+Library/Artifacts/e1/e1de044cdc79724dc32838e35bc3cadc
+Library/Artifacts/d6/d6b7d2a2b82c50b15ce07d92f2102555
+Library/Artifacts/ce/ceaa256305f3b9e5bddd169d310e106d
+Library/Artifacts/cc/cc15139885208bb4131eea9dde853e3f
+Library/Artifacts/c3/c3cd3e924d19f0b1d4c4e70f72c23783
+Library/Artifacts/b4/b4c0f4cc4d797a633814745499b8972b
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Packages/packages-lock.json
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/Artifacts/8b/8b5ce491a556f659bb70e921eb9ea36b
+Library/Artifacts/7c/7c026897b85ca1ffd3f80c2abc32b5ba
+Library/Artifacts/78/78956bcc77e7a377e027ceb35ca3dbfa
+Library/Artifacts/76/761c247aba8c9243100a6e9118de59d9
+Library/Artifacts/70/70c7948dff76d3e246ddd86034572e2f
+Library/Artifacts/6b/6bd42405068f013cee13fbc0ac97a37a
+Library/Artifacts/5b/5b2001c26c1ad6d7daefbdf69ce53120
+Library/Artifacts/4c/4c5346a449f8b9da83ea790430e20bbf
+Library/Artifacts/43/43200390a1cb38b793282debfff9ead6
+Library/Artifacts/3f/3f6c4af970e84f2b2c5851f8a329352f
+Library/Artifacts/38/3825d17e513deb71abd40835cd0114c4
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/23/2325f0b312812739055d469b443606e8
+Library/Artifacts/1a/1a07dfcdd07b32ccd27ded987f9bf340
+Library/Artifacts/19/19d563894223711cc2264d16ce02d8a1
+Library/Artifacts/0d/0da63e7cab331a8969e9c726cab316db
+Library/Artifacts/00/006a01325a2efb6ac1c6bafba1b3efab
+Packages/packages-lock.json
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Packages/packages-lock.json
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Packages/packages-lock.json
