--- a/.gitignore
+++ b/.gitignore
@@ -6358,3 +6358,6 @@ Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
 Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
 Library/Artifacts/94/9499bee16352f5597172c3f00d177937
 Packages/packages-lock.json
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Packages/packages-lock.json
