Deleted Scenes/assets no longer in use

--- a/.gitignore
+++ b/.gitignore
@@ -6361,3 +6361,55 @@ Packages/packages-lock.json
 Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
 Library/Artifacts/94/9499bee16352f5597172c3f00d177937
 Packages/packages-lock.json
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/ShaderCache/0/01de23b7a7e990781e3dbf64d7cb34b7.bin
+Library/ShaderCache/0/056ee4438400a016ff65f23fadf67c03.bin
+Library/ShaderCache/0/0c996280090079212ec0561016b0a83d.bin
+Library/ShaderCache/0/0cd7bfc59f8a5dfae3bb34cbeb692d3c.bin
+Library/ShaderCache/1/1343d680bcb6856ab32f1d7cb9843724.bin
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/ShaderCache/1/1ac2d2eeea9a327a1232b63f391f70dc.bin
+Library/ShaderCache/1/1ada5d4485d6e093b8e6b25b8a35f226.bin
+Library/ShaderCache/1/1c16b4a206c0b40fd744b855fcbeb6e5.bin
+Library/ShaderCache/1/1d45518789cb8455361138e76a52c744.bin
+Library/ShaderCache/4/448ce11b5731d486b79c9d3e8a8f7447.bin
+Library/ShaderCache/4/438b9a11e7302ea4d88a54124cffa32f.bin
+Library/ShaderCache/3/3ac18db4d6b91f4a12fc6bcf7ccebd50.bin
+Library/ShaderCache/3/37f85e101fe64f497b583d012c513f4d.bin
+Library/ShaderCache/3/355a10b15dade0c16093b71ac842f255.bin
+Library/ShaderCache/3/34665a99215c0ae8912f0708c10fd829.bin
+Library/ShaderCache/2/2e7943921ef9f4f8ca7786e88b79df0c.bin
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/ShaderCache/4/4b89971560376b8e3082b6bdf6a940cc.bin
+Library/ShaderCache/5/5d532fe00e140d73c45a30c50068a691.bin
+Library/ShaderCache/6/667bd2ef4648f8f4bbf3faa4c288391a.bin
+Library/ShaderCache/6/6ab12222c83912d2597e5bc76310559a.bin
+Library/ShaderCache/6/6afd7a924af8d31c3bcfda6680439828.bin
+Library/ShaderCache/7/74098ccb5f271e2be78d5151e6d770d3.bin
+Library/ShaderCache/7/7eac732cfd8b4a8be7c7c8e9d5c3bb5e.bin
+Library/ShaderCache/b/bfd45de773932e561bc171417099cc27.bin
+Library/ShaderCache/b/b286bd4a34111a85c0861c6a42444f3b.bin
+Library/ShaderCache/a/af620041059026b7d10d2b8fca5e5b7d.bin
+Library/ShaderCache/a/aae6fa1dc129a39b672fafe4c5181948.bin
+Library/ShaderCache/a/a9afd202c8179635d7bfbf62920d62d1.bin
+Library/ShaderCache/a/a835d5def805b64edd2338b61162f9dd.bin
+Library/ShaderCache/9/9ab242f9f3be370c0dfbf9cfc52c4a80.bin
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/ShaderCache/f/f952f1e149ca4970f9b5c9d04eb5a30b.bin
+Library/ShaderCache/f/f94f19567028299d5adc3761e0968397.bin
+Library/ShaderCache/f/f425f1d8bde2dd1bfdb770c262ee3631.bin
+Library/ShaderCache/f/f06235bd831d2aa23c5f2f77e0c69531.bin
+Library/ShaderCache/e/e816d42623092388c2b883188d26102e.bin
+Library/ShaderCache/e/e7ac903eaedf9c25d44d334e06847175.bin
+Library/ShaderCache/e/e3df4a38c8aa7908ff893341f250b4f1.bin
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Packages/packages-lock.json
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
