Adjusted speed and removed waypoint spheres

--- a/.gitignore
+++ b/.gitignore
@@ -6413,3 +6413,41 @@ Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
 Packages/packages-lock.json
 Library/Artifacts/94/9499bee16352f5597172c3f00d177937
 Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/8d/8d64ff8969001c82e330e36c83c25506
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/Artifacts/db/db496d91e2d01458dac14b6e040fe4b0
+Library/ShaderCache/1/11abdaec5c1177b50d6fb30f5a181be7.bin
+Library/ShaderCache/1/15712a1f730710ab72b78b0e18f7fa6f.bin
+Library/ShaderCache/2/247ac2e28628c4dc2b48a8ef0b77c1f9.bin
+Library/ShaderCache/3/35b0598b122fe270ce015ccfa0dd7c61.bin
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/ShaderCache/3/3627ad0681588dc3248eb37409523124.bin
+Library/ShaderCache/3/3dd34aa969fc8769c4010f280a9ce456.bin
+Library/ShaderCache/4/47c91141429b57316146f53c7878705b.bin
+Library/ShaderCache/5/522ab1b73a79f574ec48b0d531812dcf.bin
+Library/ShaderCache/6/69c1c964938e26e1a16518c42234870a.bin
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/ShaderCache/6/6f95439857ea20e5980b5c320cbe4ca5.bin
+Library/ShaderCache/7/773b80ac840c37b75b1adca8fd6dad60.bin
+Library/ShaderCache/8/82422d6339d887badf4c5faefc790f4f.bin
+Library/ShaderCache/b/b3d524799369fbb598fb17828cb9721b.bin
+Library/ShaderCache/b/bce99058918a749a30c3214483105775.bin
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/ShaderCache/e/e0c457cab1ebe0e8ddab6caeb1381072.bin
+Library/ShaderCache/e/e38db66faee1461e093bf81731ecd659.bin
+Library/ShaderCache/e/e96cf4c346da246b5dcd65b61132932f.bin
+Library/ShaderCache/e/eede00cdfa29a9aec7a40a0298ea128e.bin
+Library/ShaderCache/e/ef71bf5e8328972217f78db77501950d.bin
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/ShaderCache/f/f1989fa19892a6406b0b59d66e04e072.bin
+Packages/packages-lock.json
+Temp/UnityTempFile-3c57d1e38a32d024e86f7425a8c57389
+Temp/UnityTempFile-e96892b4279b2404c908d4c3fe149725
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Packages/packages-lock.json
