--- a/.gitignore
+++ b/.gitignore
@@ -7058,3 +7058,117 @@ Library/ShaderCache/e/eadb6aed7cf7bda0b4d66823a8c8fb36.bin
 Library/ShaderCache/e/ea608101178a061a601d3abed002b197.bin
 Library/Artifacts/94/9499bee16352f5597172c3f00d177937
 Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/04/04b4f7a50335a354b61147dcd632c50d
+Library/Artifacts/1a/1a58abd1e5edd29679726736c4d89a06
+Library/Artifacts/1b/1bc973f973876e7dd31a8e413aea6e85
+Library/Artifacts/1d/1de7cdfb3cb32b9fb668fb14088caa99
+Library/Artifacts/1d/1dec8b2837f72c2560147c634b8f450f
+Library/Artifacts/1e/1e32f1a72c11ebdd3729efe5d2ee978b
+Library/Artifacts/21/21af0ee17245ee32cb2b0e9af031eddb
+Library/Artifacts/25/255ac2b3246958b7f0ab01dfe465ad1b
+Library/Artifacts/27/27aa4000fdcc7b6b368c0c886d34dbcd
+Library/Artifacts/27/27f211cafd6be632ae3735619ed4674e
+Library/Artifacts/2a/2aea5798dd01ab71d35bf1aa72a0f204
+Library/Artifacts/2c/2c0bebf351b60ff5ff77c98e7dc59e0c
+Library/Artifacts/37/3735de9eb8a23f8cc19a4cc0f40a3b75
+Library/Artifacts/3d/3d326a734d1e82dfc39d40abfcc6e326
+Library/Artifacts/43/4349f2f4ae8c56562b33f912299d1cc1
+Library/Artifacts/46/4631febb9347298eacf4449812bf5e99
+Library/Artifacts/4b/4b3ac7069fee43eed0ddc2c069d7c5bf
+Library/Artifacts/4b/4bc492f9dbe2227ef62167abfd0d1811
+Library/Artifacts/5c/5cdfae03c72724e26b6c65a468033e52
+Library/Artifacts/5f/5f42f706e006e1eb08b4f8d84464b092
+Library/Artifacts/67/67c9d700a4d757632ee3cf6af193d59a
+Library/Artifacts/6a/6ab30f7dbcf668eb1316462c1f21fd43
+Library/Artifacts/75/75f9aae1d507ab0d91a92574deeddcba
+Library/Artifacts/7a/7a976769d5b570c4d2191e7201dde3fe
+Library/Artifacts/7f/7fee68b912cc06153bbe3f503e35e7a3
+Library/Artifacts/82/821fba3a730851e53f0d2b2225d4306a
+Library/Artifacts/84/84baabb2e4f6e75f1c0bf737f9350dc3
+Library/Artifacts/85/8524ed0a8e4f37cc59a226a2585e3462
+Library/Artifacts/88/88f959ae0ab3218fe584ec601c9b1abc
+Library/Artifacts/8c/8ccd5a55ad6733756861118b610179e8
+Library/Artifacts/8e/8ef666ca1f705813933b1e5bb62e32c5
+Library/Artifacts/8f/8f05a516e5c925620dbee9064c9fb8d1
+Library/Artifacts/94/9499bee16352f5597172c3f00d177937
+Library/Artifacts/9b/9bf5362e39c6facde850e5b5a31f442d
+Library/Artifacts/9d/9dd84ea126ef4813f37e411c7d93aaf5
+Library/Artifacts/9f/9fdc9c81c0100d1cb10498ccd2495f59
+Library/Artifacts/a1/a1678f0ef02bdfe5698985b9baf23150
+Library/Artifacts/aa/aa98bf428c948f281620ab3dcc175f39
+Library/Artifacts/af/afc5a1c2f601cb4029aa836d3dc37b00
+Library/Artifacts/c0/c07b3faedd637ff74dc58170fe97a95b
+Library/Artifacts/c4/c4ee5026ec6ce0b911ecfbcac5ba2191
+Library/Artifacts/d2/d2bd8edc586fa2910a6ff61533dcc9fb
+Library/Artifacts/d5/d52a3da6fee601ed6627aff52fd5ba68
+Library/Artifacts/d6/d6e7349909d74a61c8f79a6b76e34546
+Library/Artifacts/e0/e030ec69c39642dc6a5169195b9c07d2
+Library/Artifacts/e4/e426a35c6106236c0f0abf2b64d73e98
+Library/Artifacts/e9/e960e72f0cadf3b076e59a943f30e076
+Library/Artifacts/f0/f00a2e4842292d91bfb415dd4ece5ec0
+Library/Artifacts/f6/f6686aa9c4ec584ce84fc2911462b4bf
+Library/Artifacts/f6/f6db9382f00537e6f5c55503a1add389
+Library/ShaderCache/0/007020a5f68e735d20d51b5c8c9bf5df.bin
+Library/ShaderCache/0/0d40a0ec69aa9401966c6f84ac2a817e.bin
+Library/ShaderCache/1/1349ef6043d1bdbc437aba2aec89c655.bin
+Library/ShaderCache/1/14c7c40510b23249ff43d67a5d88b6de.bin
+Library/ShaderCache/1/18530cdd606a3ff67c7a41e2cd708707.bin
+Library/ShaderCache/2/2ab33a80b4864aaa02034d95785da2c9.bin
+Library/ShaderCache/2/2f0debb0669bd1f909ab0e16c9ee9d69.bin
+Library/ShaderCache/3/32c3e468b381773b81d433e655266e83.bin
+Library/ShaderCache/3/3ad3a98b543ee5e5e154b9c86ed9604d.bin
+Library/ShaderCache/3/3d6f2982808ac7aeda8469950f030b0a.bin
+Library/ShaderCache/3/3d7436ec59695613acb8b24b74ac1513.bin
+Library/ShaderCache/3/3ec998fbc32d713ca71f72c0f56ba170.bin
+Library/ShaderCache/4/4191866ebe6ef57eb86543772e162d75.bin
+Library/ShaderCache/4/4535a510ae8d02c31fb7d75865c3c12b.bin
+Library/ShaderCache/4/45ad052c06a86ca160b485b44300a84e.bin
+Library/ShaderCache/4/4bd0fcaaa36d3d535093fd634eb4f5a4.bin
+Library/ShaderCache/5/5520ddd64e96ec50a4d5e9ead419fbe2.bin
+Library/ShaderCache/5/5a347a8c24f7e8f6a350b0ca80421dcf.bin
+Library/ShaderCache/5/5dc514a74300ce10cf8ec2d50b561df3.bin
+Library/ShaderCache/6/64d7f7ac0cc8ca6f24235878be90bf91.bin
+Library/ShaderCache/6/6addad62264e64dc7374becf8b065c9b.bin
+Library/ShaderCache/7/70121ec1f35ec0f818821fcd38738632.bin
+Library/ShaderCache/7/717c64d5d6716ba9c7fc45144329709e.bin
+Library/ShaderCache/7/72292fa018c68885f4691af6a422a24d.bin
+Library/ShaderCache/7/731e5c32289e3bdc84afec460a468669.bin
+Library/ShaderCache/7/73943b328b5edcc6d1fdb2785e6fe014.bin
+Library/ShaderCache/7/74479a01c36336177190cdcd9786397b.bin
+Library/ShaderCache/7/744b4cacbb0527979a4bfee70532895c.bin
+Library/ShaderCache/7/79f3d8140e368a801a1982c9f6b3179d.bin
+Library/ShaderCache/8/820ae29a518171b1ce78211debb37c17.bin
+Library/ShaderCache/8/825c4a6e0d9611aac05af1812374d662.bin
+Library/ShaderCache/8/852dafbfd29f65511d7be259ab84db25.bin
+Library/ShaderCache/8/8b0b203f126f0e4c0288619a87a1f75f.bin
+Library/ShaderCache/8/8cdd947537c2805f0c4ce2d7df15338f.bin
+Library/ShaderCache/8/8d3c1b42d09fa51d9fda675343ff1e68.bin
+Library/ShaderCache/9/91008eb49199060e583c81f4d472b5c7.bin
+Library/ShaderCache/9/95eee8f013165f163b89b4c5f3227265.bin
+Library/ShaderCache/9/98dafa243ba8fa953b32d1e3be1ed980.bin
+Library/ShaderCache/9/9d6739412a9b172638e6e75f04c2a15c.bin
+Library/ShaderCache/a/a1302a91ea8722ee17086eee29c6e34a.bin
+Library/ShaderCache/a/aa5c6c804def545a241a8693c5ac5725.bin
+Library/ShaderCache/a/ad96cd8344f8cfb4d7fa5374e33f43f0.bin
+Library/ShaderCache/a/ae86f22c9067d7ad8e19b3e328018a6e.bin
+Library/ShaderCache/b/b035966083f6a87eda5114c2550786d8.bin
+Library/ShaderCache/b/b11c39824067c90134fa6180d2984d60.bin
+Library/ShaderCache/b/b388896efc28136f4a523de72509b9f5.bin
+Library/ShaderCache/b/b59673656fe6586963b8bd0cafa09515.bin
+Library/ShaderCache/b/bb6c32dbe8622b6a16a4158a1641ad84.bin
+Library/ShaderCache/b/bfb484e0cf7b3363bb0d3622ad85144c.bin
+Library/ShaderCache/c/c8bfd2ac2e4a02a274a4aeb8849d1e0b.bin
+Library/ShaderCache/c/ca47492b6b01f8a6ede35444a9ecbd37.bin
+Library/ShaderCache/d/d0b1ace711ca23b67d8275b01195cbb1.bin
+Library/ShaderCache/d/d5a128bc996237dba5e30b5584c2d235.bin
+Library/ShaderCache/d/d67307d853b1e3f2c42ac83f2474d93f.bin
+Library/ShaderCache/d/d81fda79690a469a456425852488badc.bin
+Library/ShaderCache/d/dc2d76dfe31e168858931087ef14bb38.bin
+Library/ShaderCache/d/de1b5cfa9bb6a38625dc0845eb5dd0fb.bin
+Library/ShaderCache/e/e78370dc3bd70d595ef060ead2ac2d96.bin
+Library/ShaderCache/e/ee9e33a77016d1379f70274812c9a6a2.bin
+Library/ShaderCache/e/eec27bf6aad2bc91c782404d42d72683.bin
+Library/ShaderCache/f/f09f0d5ff3cf19c74f91e593fde9dde0.bin
+Library/ShaderCache/f/f42db1eccdbbf870ad142a6b076b95fc.bin
+Library/ShaderCache/f/f8dd6f864211c1ea4ae3c5831b6a68ca.bin
+Library/ShaderCache/f/f986b63ae24f7c20aa69e416beaae844.bin
