Added to UI buttons/panels

--- a/.gitignore
+++ b/.gitignore
@@ -7172,3 +7172,40 @@ Library/ShaderCache/f/f09f0d5ff3cf19c74f91e593fde9dde0.bin
 Library/ShaderCache/f/f42db1eccdbbf870ad142a6b076b95fc.bin
 Library/ShaderCache/f/f8dd6f864211c1ea4ae3c5831b6a68ca.bin
 Library/ShaderCache/f/f986b63ae24f7c20aa69e416beaae844.bin
+Library/Artifacts/0f/0f98a59a5f547def23c6c71ff201b3e5
+Library/Artifacts/3c/3cfae09f0661284af35f39f54ebecc6e
+Library/Artifacts/47/47b266ca317845b3298ea72a91740f74
+Library/Artifacts/5e/5e176a19611ed78d28633468344164d1
+Library/Artifacts/75/7578c643285c28836eb2f93353e6ec99
+Library/Artifacts/80/80570c12c019d7b5eed07e22fb89dd19
+Library/Artifacts/a2/a2ed832356092a07bde2ad688d982bc9
+Library/Artifacts/a3/a34ac9daa6d8af75e365b049002992da
+Library/Artifacts/a4/a4e9735293ef63f1ce02e6d514c4bf5f
+Library/Artifacts/ba/ba498861b15417b4c365509d5720ba8e
+Library/Artifacts/bb/bb748ccf3d6e9095e5c995dae9cec021
+Library/Artifacts/ed/ed3e8282c17b3cfa7ec0c542080d31c4
+Library/Artifacts/f3/f36a59b49af37b2a6eacc962526840cb
+Library/Artifacts/fa/fa136c1d05df9d50ca2d953d3a87a5fd
+Library/ShaderCache/0/044f7c89207fde159e98374e334da06e.bin
+Library/ShaderCache/3/3e51dc4f136e845762b760404d3f9555.bin
+Library/ShaderCache/4/4ce47e8d28f2718183246db98a068868.bin
+Library/ShaderCache/5/5377c8421d6d92d1af11742fee523aa8.bin
+Library/ShaderCache/5/553a341e3218e29399c35022b5d5ff97.bin
+Library/ShaderCache/6/662d83585cb8324f6f6326c9b741cb91.bin
+Library/ShaderCache/7/723eb793148fdd0e27930075a38b30a9.bin
+Library/ShaderCache/a/af1a121bc34685d9079fd954d9fe3e0f.bin
+Library/ShaderCache/b/bb4dd67e47112f4aa7c0ef9350632a63.bin
+Library/ShaderCache/d/d3f3d36c212c413dc5e5522d210bff7d.bin
+Library/ShaderCache/e/e03f46e7846ceab1a6ae70a9b1d4c6bd.bin
+Library/ShaderCache/e/ea3877c575da07f4b2d1cf5f61423eee.bin
+Library/ShaderCache/e/eaa3c85b1c6542ba81ee2c997e247faa.bin
+Library/ShaderCache/f/f8326f149ef739e28c0fb27dd4570e8a.bin
+Library/ShaderCache/f/fb3784501b3e22b0c8669deb2375ad21.bin
+Library/ShaderCache/f/fc0ad658780789b9883a9b02999f03fd.bin
+Library/StateCache/Hierarchy/5995d2-77ed7643232f89a46a.json
+Library/StateCache/Hierarchy/5995d2-9c219adaabb01d6409.json
+Library/StateCache/SceneView/fc0c01-77ed7643232f89a46a.json
+Library/StateCache/SceneView/fc0c01-9c219adaabb01d6409.json
+Library/UIElements/EditorWindows/UnityEditor.PackageManager.UI.PackageManagerWindow.pref
+Temp/UnityTempFile-05a1186260fe41446a3cbc36b6d57b01
+Temp/UnityTempFile-b7c5d17b1b076dd4eacfe73a55891b35
