Incorporated Title Screen

--- a/.gitignore
+++ b/.gitignore
@@ -7209,3 +7209,27 @@ Library/StateCache/SceneView/fc0c01-9c219adaabb01d6409.json
 Library/UIElements/EditorWindows/UnityEditor.PackageManager.UI.PackageManagerWindow.pref
 Temp/UnityTempFile-05a1186260fe41446a3cbc36b6d57b01
 Temp/UnityTempFile-b7c5d17b1b076dd4eacfe73a55891b35
+Library/ShaderCache/3/3e94854a803c85b0617655950922029e.bin
+Library/ShaderCache/4/45243ad13e6486304686dd55e589145c.bin
+Library/ShaderCache/4/478fd63cd95cb851b23300fc424b05f6.bin
+Library/ShaderCache/4/4fc0b7334bdb3840426de9bdeb1f9d7f.bin
+Library/ShaderCache/6/62d28c41ccc7fec100439c0bcc7b521c.bin
+Library/ShaderCache/9/958f9f699851f7c5e01477dcc2caa413.bin
+Library/ShaderCache/a/a951e7af3543b1c6e531e40a8a8932a6.bin
+Library/ShaderCache/c/cb2574f7e640bcca44f6a8bea7d48867.bin
+Library/Artifacts/00/0062650856c139f08ef0872f6bf46817
+Library/Artifacts/00/00b38916a06b6e6511cf1b8e97f60525
+Library/Artifacts/01/01ab47df1bdd6f3eb9b58a3b853246da
+Library/Artifacts/02/02a7d0ebf7638656f0588ff7e1506ed7
+Library/Artifacts/03/03172c58f6325fef54f8519cd111227b
+Library/Artifacts/03/03c661b3471f3c4099f4483db6b1ebe2
+Library/Artifacts/04/042de5ccb01ea4327864a484100f0883
+Library/Artifacts/04/04fb71914ee550729cbe7ccad214dfcf
+Library/Artifacts/00/0062650856c139f08ef0872f6bf46817
+Library/Artifacts/00/00b38916a06b6e6511cf1b8e97f60525
+Library/Artifacts/01/01ab47df1bdd6f3eb9b58a3b853246da
+Library/Artifacts/02/02a7d0ebf7638656f0588ff7e1506ed7
+Library/Artifacts/03/03172c58f6325fef54f8519cd111227b
+Library/Artifacts/03/03c661b3471f3c4099f4483db6b1ebe2
+Library/Artifacts/04/042de5ccb01ea4327864a484100f0883
+Library/Artifacts/04/04fb71914ee550729cbe7ccad214dfcf
